--- a/VRChat/64/1255264.html
+++ b/VRChat/64/1255264.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "uawASA1A8nEVjRDS2tqSKzHIJMwNwVg0JrmVIMrczos="></script>
+    "lfWhCYDjB+9H7BLskljg9wukaH0wwDEDaNhzuugJc7g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『リンツ』","description":"##モデル説明##\n\n#内容物\n・CornetUnitypackage\n　ダイナミックボーン、マテリアル、VRChat用コンポーネント設定済みのprefabが含まれるUnitypackageです。\n　PSD、FBXデータも含まれています。\n\n・PSDフォルダ\n　改変用のPSDデータが入っています。\n\n・FBXフォルダ\n　改変用のFBXデータが入っています。\n\n#ボーンについて\nUnityのHumanoidの規則に沿った作りになっています。\nHumanoid切り替え時に自動で設定されますが、Chestがアサインされないので手動でアサインし、\nJawに不要なボーンがアサインされるので外してください。\n\n#マテリアル設定\nhttps://booth.pm/ja/items/1723985\n本モデルはSunao Shaderを推奨しています。\nPrefabフォルダに設定済みのものがありますので、予めSunao Shaderの導入をお願いします。\n\n#DynamicBoneについて\n付属Unitypackageで設定済みのものがありますので、予めDynamicBoneの導入をお願いします。\n\n#モーフについて\nVRChat用のリップシンクが設定がされています。\n自動瞬きに関してはダミーデータが設定されています。\n表情用に目、眉、口、オプションでそれぞれ分かれているので組み合わせて使用してください。\n\n#VRChatのフルトラッキングについて\nアップロード時に注意表記が出ますがフルトラッキングに対応しています。\n\n#Blenderで編集する場合の注意点\nこのデータはMayaで作られたものですので、Blenderでfbxを読み込むとシェイプキーの順番がバラバラになります。\nBlender編集時.pngを参考に修正をお願いします。\nhttps://kumattass.booth.pm/items/1020668\nひまくま(kumatta_ss)さんの方で自動化アドオンを作成して頂いているのでそちらでも修正することができます。\n\n#VRChatSDK3.0対応\nPrefabフォルダにVRChatSDK3.0設定済みのものがあります。\n上着の脱着、帽子の脱着のギミックが設定してあります。\n\n--------------------------------------------------\n更新情報\n19/03/08 リリース \n19/03/21 尻尾のメッシュ、ボーンの名称を修正\n　　　　 改造用.psdの上着の襟の装飾がレイヤ分けされていなかったのを修正\n21/11/11 VRChatSDK3.0対応、フルトラッキング精度向上の為に肩、肘のボーンを調整。\n22/04/24 PhysBones対応。帽子を持てるようにボーン調整。前髪を伸ばせるように調整。","url":"https://booth.pm/ja/items/1255264","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/10942f35-97bb-434d-9f5a-6083e00c7891/i/1255264/598f947e-d41c-492a-843d-9926e694ff67_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uawASA1A8nEVjRDS2tqSKzHIJMwNwVg0JrmVIMrczos="></script>
+    nonce="lfWhCYDjB+9H7BLskljg9wukaH0wwDEDaNhzuugJc7g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -772,7 +772,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;}]"
+    "[{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
